--- a/chat.html
+++ b/chat.html
@@ -2,13 +2,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>JSAssist Chat Widget - twitch-open-dccon</title>
+  <title>JSAssist Chat Widget - twitch-custom-css</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="https://cdn.rawgit.com/rishubil/jsassist-open-dccon/master/js/jsassist.viewer_build18.js"></script>
-  <script src="https://cdn.rawgit.com/rishubil/jsassist-open-dccon/master/js/dccon.js"></script>
-  <link rel="stylesheet" href="https://cdn.rawgit.com/rishubil/jsassist-open-dccon/master/css/styles.css" type="text/css" />
+  <script src="https://raw.githubusercontent.com/krynen/jsassist-custom-css/master/js/jsassist.viewer_build18.js"></script>
+  <script src="https://raw.githubusercontent.com/krynen/jsassist-custom-css/master/js/import_data.js"></script>
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/krynen/jsassist-custom-css/master/css/styles.css" type="text/css" />
 </head>
 
 <body>
