mod script link

--- a/chat.html
+++ b/chat.html
@@ -6,9 +6,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="https://raw.githubusercontent.com/krynen/jsassist-custom-css/master/js/jsassist.viewer_build18.js"></script>
-  <script src="https://raw.githubusercontent.com/krynen/jsassist-custom-css/master/js/import_data.js"></script>
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/krynen/jsassist-custom-css/master/css/styles.css" type="text/css" />
+  <script src="https://krynen.github.io/jsassist-custom-css/js/jsassist.viewer_build18.js"></script>
+  <script src="https://krynen.github.io/jsassist-custom-css/js/import_data.js"></script>
+  <link rel="stylesheet" href="https://krynen.github.io/jsassist-custom-css/css/styles.css" type="text/css" />
 </head>
 
 <body>
