mod chat and test centering

--- a/chat.html
+++ b/chat.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://krynen.github.io/jsassist-custom-css/js/jsassist.viewer_build18.js"></script>
   <script src="https://krynen.github.io/jsassist-custom-css/js/import_data.js"></script>
-  <link rel="stylesheet" href="https://krynen.github.io/jsassist-custom-css/css/styles.css" type="text/css" />
+  <link rel="stylesheet" href= type="text/css" />
 </head>
 
 <body>
