http to https, html mod, js testcode

--- a/list.html
+++ b/list.html
@@ -101,7 +101,7 @@
       -ms-transform: translate(-50%, -81px);
       transform: translate(-50%, -81px);
 			
-		.col-15 { width:12.5%; }
+		.col-15 { width:12.5%; flex:none; }
     }
   </style>
 </head>
