--- a/list.html
+++ b/list.html
@@ -84,12 +84,14 @@
 
     .dccon.tooltip::after {
       width: 100%;
-      margin-left: 9px;
+/*      margin-left: 9px;
       margin-right: 9px;
-      height: 72px;
-      padding: 12px;
+*/      height: 72px;
+/*      padding: 12px;
       padding-right: 28px;
-      white-space: pre-line;
+*/			padding:1.5rem;
+/*      white-space: pre-line;
+*/		white-space:pre-wrap;
       border-top-left-radius: 0px;
       border-top-right-radius: 0px;
     }
