tagging and list html transparency

--- a/list.html
+++ b/list.html
@@ -104,7 +104,8 @@
       transform: translate(-50%, -81px);		
     }
 		
-		.col-15 { width:12.5%; flex:none; }
+		.col-15		{ width:12.5%; flex:none; }
+		div.card		{ background:transparent; }
   </style>
 </head>
 
