--- a/chat.html
+++ b/chat.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://krynen.github.io/jsassist-custom-css/js/jsassist.viewer_build18.js"></script>
-  <script src="https://krynen.github.io/jsassist-custom-css/js/import_data.js" 
-					onload="addChatMessage("twitch", "맛물", "디씨콘과 CSS 로딩이 완료되었습니다.");"></script>
+  <script src="https://krynen.github.io/jsassist-custom-css/js/import_data.js"></script>
 </head>
 
 <body>
