--- a/list.html
+++ b/list.html
@@ -106,6 +106,14 @@
 		
 		.col-15		{ width:12.5%; flex:none; }
 		div.card		{ background:transparent; }
+		
+		.img-background			{	opacity:0; }
+		.card, .card-image	{	height:100%; }
+		.card-image					{	position:relative; }
+		.img-responsive.width100.lazy
+													{ position:absolute;
+														top:0; bottom:0; left:0; right:0;
+														margin:auto; }
   </style>
 </head>
 
@@ -139,6 +147,40 @@
     <div class="toast-container"></div>
 
   </div>
+	<script type="text/javascript">
+		var stl = null;
+		
+		var resize = function() {
+			if (stl!=null) { stl.remove(); }
+			stl = document.createElement("style");
+			
+			var lst = document.body.getElementsByClassName("dccon-list")[0];
+			if (lst.offsetWidth < 800)
+			{
+				if (lst.offsetWidth < 600)
+				{
+					if (lst.offsetWidth < 500)
+					{
+						if (lst.offsetWidth < 400)
+						{
+							if (lst.offsetWidth < 200) { stl.innerText=".col-15{width:100%;}" }
+							else { stl.innerText=".col-15{width:50%;}" }
+						}
+						else { stl.innerText=".col-15{width:25%;}" }
+					}
+					else { stl.innerText=".col-15{width:20%;}" }
+				}
+				else { stl.innerText=".col-15{width:16%;}" }
+			}
+			else { stl.innerText=".col-15{width:12.5%;}" }
+			
+			document.body.appendChild(stl);
+			console.log(stl.innerText);
+		};
+		
+		window.addEventListener("resize", resize);
+		window.addEventListener("load", resize);
+	</script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.5/jquery.lazy.min.js"></script>
@@ -191,6 +233,7 @@
             .join(', ') + '">' +
             '  <div class="card">' +
             '    <div class="card-image">' +
+						'      <img class="img-background" src="' + dccon.path + '">' +
             '      <img class="img-responsive width100 lazy" data-src="' + dccon.path + '">' +
             '    </div>' +
 /*            '    <div class="card-body">' +
