--- a/list.html
+++ b/list.html
@@ -107,7 +107,7 @@
 		.col-15		{ width:12.5%; flex:none; }
 		div.card		{ background:transparent; }
 		
-		.img-background			{	opacity:0; }
+		.img-background			{	opacity:0; width:100px; height:100px; }
 		.card, .card-image	{	height:100%; }
 		.card-image					{	position:relative; }
 		.img-responsive.width100.lazy
